[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["m2dm"]

[tool.setuptools.packages]
find = {}

[project]
name = "mu2dm"
version = "0.0.1"
authors = [
  { name="Emil Andreas", email="emil.andreas@ipa.fraunhofer.de" },

]
description = "Research"
readme = "README.md"
requires-python = ">=3.11.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'tqdm ~= 4.65.0',
  'pytest',
  'torch == 2.1.2',
  'torchvision == 0.16.2',
  'denoising-diffusion-pytorch == 1.9.6',
  'pytorch-fid == 0.3.0',
  'matplotlib',
  'black == 24.2.0',
  'ijson == 3.1.4',
]

[tool.isort]
profile = "black"