[build-system]
requires = ["setuptools>=61.0","torch==2.3.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mu2dm"]

[tool.setuptools.packages]
find = {}

[project]
name = "mu2dm"
version = "0.0.1"
authors = [
  { name="Emil Andreas", email="emil.andreas@ipa.fraunhofer.de" },

]
description = "Research"
readme = "README.md"
requires-python = ">=3.10.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'blobfile == 2.1.1',
  'einops == 0.8.0',
  'fvcore ~= 0.1.5',
  'tqdm ~= 4.65.0',
  'pytest',
  'torch == 2.3.1',
  'torchvision',
  'torchaudio',
  'pytorch-fid == 0.3.0',
  'matplotlib',
  'black == 24.2.0',
]

[tool.isort]
profile = "black"